feature: get shopping cart endpoint
